Started on the main page. Tried some js, made some buttons.

--- a/site/css/css.css.scss
+++ b/site/css/css.css.scss
@@ -1,2 +1,5 @@
 @import '_grid.css.scss';
 @import '_header.css.scss';
+@import '_slideshow.css.scss';
+@import '_buttons.css.scss';
+@import '_main.css.scss';
