--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sälj din Säl!</title>
     <link rel="stylesheet" href="css/css.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <title>Sälj din Säl!</title>
 </head>
 <body>
     <div class="grid">
