--- a/site/public/css/css.css
+++ b/site/public/css/css.css
@@ -18,4 +18,62 @@ header {
   background-color: hotpink; }
   header h1 {
     grid-column: 2/3;
-    grid-row: span 1; }
+    grid-row: span 1;
+    font-family: 'Roboto Slab', serif;
+    font-size: 20px;
+    text-align: center; }
+
+.slideshow {
+  grid-column: span 1;
+  grid-row: span 3;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(3, 1fr); }
+
+main {
+  /*img:first-child {
+      display: block;
+  }*/ }
+  main .slide {
+    position: absolute;
+    display: none; }
+
+.show {
+  display: block;
+  grid-column: span 8;
+  grid-row: span 3; }
+
+.hide {
+  display: none; }
+
+button {
+  color: white;
+  align-self: center;
+  text-align: center;
+  background-color: black;
+  border-radius: 9001px;
+  font-size: 25px;
+  border-style: solid;
+  border-color: white;
+  grid-column: span 1; }
+  button:active {
+    color: black;
+    background-color: white;
+    border-color: black; }
+
+main a {
+  align-self: center;
+  text-align: center; }
+main a:nth-of-type(1) {
+  grid-row: 4/5; }
+main a:nth-of-type(2) {
+  grid-row: 5/6; }
+main a:nth-of-type(3) {
+  grid-row: 6/7; }
+
+main {
+  grid-column: span 1;
+  grid-row: span 6;
+  display: grid;
+  grid-template-columns: inherit;
+  grid-template-rows: repeat(6, 1fr); }
