--- a/site/css/_header.css.scss
+++ b/site/css/_header.css.scss
@@ -9,5 +9,8 @@ header {
     h1 {
         grid-column: 2/3;
         grid-row: span 1;
+        font-family: 'Roboto Slab', serif;
+        font-size: 20px;
+        text-align: center;
     }
 }
