--- a/site/public/css/css.css
+++ b/site/public/css/css.css
@@ -24,28 +24,73 @@ header {
     text-align: center; }
 
 .slideshow {
-  grid-column: span 1;
+  /*grid-column: span 1;
   grid-row: span 3;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(3, 1fr); }
+  grid-template-rows: repeat(3, 1fr);*/
+  max-width: 1000px;
+  position: relative;
+  margin: auto; }
 
-main {
-  /*img:first-child {
-      display: block;
-  }*/ }
-  main .slide {
-    position: absolute;
-    display: none; }
-
-.show {
-  display: block;
-  grid-column: span 8;
-  grid-row: span 3; }
-
-.hide {
+.mySlides {
   display: none; }
 
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: red;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0; }
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px; }
+
+.dot {
+  /*cursor: pointer;*/
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease; }
+
+.active, .dot:hover {
+  background-color: #717171; }
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s; }
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4; }
+  to {
+    opacity: 1; } }
+@keyframes fade {
+  from {
+    opacity: .4; }
+  to {
+    opacity: 1; } }
+/*.show {
+    display: block;
+    grid-column: span 8;
+    grid-row: span 3;
+}
+
+.hide {
+    display: none;
+}*/
 button {
   color: white;
   align-self: center;
