--- a/site/css/css.css.scss
+++ b/site/css/css.css.scss
@@ -3,3 +3,6 @@
 @import '_slideshow.css.scss';
 @import '_buttons.css.scss';
 @import '_main.css.scss';
+@import '_sell.css.scss';
+@import '_faq.css.scss';
+@import '_sellers.css.scss';
