--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -1,12 +1,12 @@
 <main>
     <div class="slideshow">
-        <h2 class="arrowleft"><button  onclick="changeImg(-1)">&#10094;</button></h2>
-        <h2 class="arrowright"><button  onclick="changeImg(1)">&#10095;</button></h2>
+        <h2 class="arrowleft"><button class="icon" onclick="changeImg(-1)">&#10094;</button></h2>
+        <h2 class="arrowright"><button class="icon" onclick="changeImg(1)">&#10095;</button></h2>
         <img name="slide" width="360">
     </div>
-    <a href="#"><button>Sälj din Säl!</button></a>
-    <a href="#"><button>Information</button></a>
-    <a href="#"><button>Glada Säljare</button></a>
+    <a href="sell.html"><button>Sälj din Säl!</button></a>
+    <a href="faq.html"><button>Information</button></a>
+    <a href="sellers.html"><button>Glada Säljare</button></a>
 </main>
 
 <script>
