--- a/site/sell.html.erb
+++ b/site/sell.html.erb
@@ -1,3 +1,9 @@
 <main class="sell">
-    <input type="text">
+    <input type="text" placeholder="Förnamn">
+    <input type="text" placeholder="Efternamn">
+    <input type="text" placeholder="E-Mail">
+    <input type="text" placeholder="Adress">
+    <input type="checkbox">
+    <a href="faq.html">Jag vet vad det innebär att sälja min säl.</a>
+    <a href="sold.html"><button>Sälj din Säl!</button></a>
 </main>
