--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -10,7 +10,9 @@
 <body>
     <div class="grid">
     <header>
+        <a href="index.html"><button class="icon">HEM</button></a>
         <h1>Sälj din Säl!</h1>
+        <a href="sell.html"><button class="icon">SÄLj</button></a>
     </header>
     <%= yield %>
     </div>
