--- a/site/public/css/css.css
+++ b/site/public/css/css.css
@@ -6,22 +6,25 @@ body {
   height: 598px;
   display: grid;
   grid-template-columns: 1;
-  grid-template-rows: repeat(7, 1fr);
-  background-color: greenyellow; }
+  grid-template-rows: repeat(7, 1fr); }
 
 header {
   grid-column: span 1;
   grid-row: span 1;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 1;
-  background-color: hotpink; }
+  background-color: #0D44FF; }
   header h1 {
-    grid-column: 2/3;
+    grid-column: 2/5;
     grid-row: span 1;
     font-family: 'Roboto Slab', serif;
     font-size: 20px;
-    text-align: center; }
+    text-align: center;
+    margin-top: 20px;
+    color: white; }
+  header a {
+    margin-top: 20px; }
 
 .slideshow {
   grid-row: span 3;
@@ -31,14 +34,6 @@ header {
   .slideshow img {
     grid-column: span 5;
     grid-row: span 3; }
-  .slideshow button {
-    color: black;
-    background-color: transparent;
-    border-color: transparent; }
-    .slideshow button:active {
-      color: black;
-      background-color: transparent;
-      border-color: transparent; }
 
 .arrowleft {
   position: absolute;
@@ -57,19 +52,20 @@ header {
   margin-left: 325px; }
 
 button {
-  color: white;
+  color: #0D44FF;
   align-self: center;
   text-align: center;
-  background-color: black;
+  background-color: white;
   border-radius: 9001px;
   font-size: 25px;
+  font-family: 'roboto';
   border-style: solid;
-  border-color: white;
+  border-color: #0D44FF;
   grid-column: span 1; }
   button:active {
-    color: black;
-    background-color: white;
-    border-color: black; }
+    color: white;
+    background-color: #0D44FF;
+    border-color: white; }
 
 main a {
   align-self: center;
@@ -81,9 +77,68 @@ main a:nth-of-type(2) {
 main a:nth-of-type(3) {
   grid-row: 6/7; }
 
+button.icon {
+  color: black;
+  background-color: transparent;
+  border-color: transparent; }
+  button.icon:active {
+    color: black;
+    background-color: transparent;
+    border-color: transparent; }
+
 main {
   grid-column: span 1;
   grid-row: span 6;
   display: grid;
   grid-template-columns: inherit;
-  grid-template-rows: repeat(6, 1fr); }
+  grid-template-rows: repeat(6, 1fr);
+  background-color: #00C0FF; }
+
+main.sell {
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(12, 1fr); }
+
+main.sellers {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr); }
+
+main.sell input {
+  grid-column: 2/7; }
+main.sell input:nth-of-type(1) {
+  grid-row: 2; }
+main.sell input:nth-of-type(2) {
+  grid-row: 4; }
+main.sell input:nth-of-type(3) {
+  grid-row: 6; }
+main.sell input:nth-of-type(4) {
+  grid-row: 8; }
+main.sell input:nth-of-type(5) {
+  grid-column: 2;
+  grid-row: 9; }
+main.sell a:nth-of-type(1) {
+  grid-column: 3/7;
+  grid-row: 9;
+  text-decoration: none;
+  color: black; }
+main.sell a:nth-of-type(2) {
+  grid-column: 2/7;
+  grid-row: 10/12; }
+main.sell p {
+  grid-column: 2/7;
+  grid-row: 2/7;
+  font-family: 'Roboto Slab', 'serif';
+  font-size: 25px; }
+main.sell img {
+  grid-column: 2/7;
+  grid-row: 7/12; }
+
+main h3 {
+  margin-left: 10px;
+  margin-right: 10px; }
+main p {
+  margin-left: 20px; }
+
+main.sellers img {
+  grid-column: span 1;
+  grid-row: span 1;
+  width: 180px; }
