--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -1,7 +1,7 @@
 <main>
     <div class="slideshow">
-        <h2 class="arrowleft"><button class="icon" onclick="changeImg(-1)">&#10094;</button></h2>
-        <h2 class="arrowright"><button class="icon" onclick="changeImg(1)">&#10095;</button></h2>
+        <button class="icon, arrowleft" onclick="changeImg(-1)"></button>
+        <button class="icon, arrowright" onclick="changeImg(1)"></button>
         <img name="slide" width="360">
     </div>
     <a href="sell.html"><button>Sälj din Säl!</button></a>
