Changed from pixels to viewport- units.

--- a/site/css/_sellers.css.scss
+++ b/site/css/_sellers.css.scss
@@ -2,6 +2,6 @@ main.sellers {
     img {
         grid-column: span 1;
         grid-row: span 1; 
-        width: 180px;
+        width: 50vw;
     }
 }
