--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -2,7 +2,7 @@
     <div class="slideshow">
         <button class="icon, arrowleft" onclick="changeImg(-1)"></button>
         <button class="icon, arrowright" onclick="changeImg(1)"></button>
-        <img name="slide" width="360">
+        <img name="slide">
     </div>
     <a href="sell.html"><button>Sälj din Säl!</button></a>
     <a href="faq.html"><button>Information</button></a>
