--- a/site/css/_grid.css.scss
+++ b/site/css/_grid.css.scss
@@ -3,9 +3,16 @@ body {
 }
 
 .grid {
-    width: 360px;
-    height: 598px;
+    width: 100vw;
+    height: 100vh;
     display: grid;
     grid-template-columns: 1;
     grid-template-rows: repeat(7, 1fr);
+}
+
+
+@media only screen and (min-device-width: 400px) {
+    .grid {
+        
+    }
 }
