--- a/site/css/_slideshow.css.scss
+++ b/site/css/_slideshow.css.scss
@@ -7,6 +7,8 @@
     img {
         grid-column: span 5;
         grid-row: span 3;
+        width: 100vw;
+        height: 43vh;
     }
 }
 
@@ -16,7 +18,7 @@
     grid-row: 2/3;
     align-self: center;
     justify-content: center;
-    margin-left: 0px;
+    margin-left: 0vw;
     border-color: transparent;
 
     &:active {
@@ -30,7 +32,7 @@
     grid-row: 2/3;
     align-self: center;
     justify-content: center;
-    margin-left: 320px;
+    margin-left: 89vw;
     border-color: transparent;
 
     &:active {
