--- a/site/faq.html.erb
+++ b/site/faq.html.erb
@@ -1,4 +1,4 @@
-<main>
+<main class="faq">
     <h3>Vad finns det för fördelar med att sälja min säl?</h3>
     <ul>
         <li>Du behöver inte längre ta hand om den.</li>
