--- a/site/sellers.html.erb
+++ b/site/sellers.html.erb
@@ -1,6 +1,6 @@
 <main class="sellers">
-    <img src="img/Awkward-Seal.jpg" alt="">
+    <img src="img/sealler1.jpg" alt="">
     <img src="img/nom.jpg" alt="">
     <img src="img/sealsnow.jpg" alt="">
-    <img src="img/nom.jpg" alt="">
+    <img src="img/Awkward-Seal.jpg" alt="">
 </main>
