--- a/site/css/_sell.css.scss
+++ b/site/css/_sell.css.scss
@@ -47,5 +47,8 @@ main.sell {
     img {
         grid-column: 2/7;
         grid-row: 7/12;
+        width: 71.5vw;
+        height: 35vh;
+        object-fit: cover;
     }
 }
