--- a/site/sellers.html.erb
+++ b/site/sellers.html.erb
@@ -1,6 +1,9 @@
 <main class="sellers">
-    <img src="img/sealler1.jpg" alt="">
-    <img src="img/nom.jpg" alt="">
-    <img src="img/sealsnow.jpg" alt="">
-    <img src="img/Awkward-Seal.jpg" alt="">
+    <div class="darken" onclick="toggleMenu()"></div>
+    <div class="details" onclick="toggleMenu()"></div>
+    <img src="img/sealler1.jpg" onclick="toggleMenu()">
+    <img src="img/nom.jpg">
+    <img src="img/sealsnow.jpg">
+    <img src="img/Awkward-Seal.jpg">
 </main>
+<script src="js/details.js"></script>
