--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -17,6 +17,7 @@
     images[1] = 'img/sealsnow.jpg';
     images[2] = 'img/nom.jpg';
     images[3] = 'img/sealler1.jpg';
+    images[4] = 'img/cash_overflow.jpg';
 
     function changeImg(n){
         if(i > images.length-1){
