--- a/site/css/_grid.css.scss
+++ b/site/css/_grid.css.scss
@@ -8,4 +8,44 @@ body {
     display: grid;
     grid-template-columns: 1;
     grid-template-rows: repeat(7, 1fr);
+
+    .ad1 {
+        display: none;
+        grid-column: span 1;
+        grid-row: span 6;
+        background-color: hotpink;
+    }
+
+    .ad2 {
+        display: none;
+        grid-column: span 1;
+        grid-row: span 6;
+        background-color: hotpink;
+    }
+}
+
+@media only screen and (min-device-width: 800px) {
+    .grid {
+        grid-template-columns: repeat(2, 1fr);
+
+        .ad1 {
+            display: block;
+            width: 30vw;
+        }
+    }
+}
+
+@media only screen and (min-device-width: 1000px) {
+    .grid {
+        grid-template-columns: repeat(3, 1fr);
+
+        .ad1 {
+            width: 25vw;
+        }
+
+        .ad2 {
+            display: block;
+            width: 25vw;
+        }
+    }
 }
