--- a/site/css/_header.css.scss
+++ b/site/css/_header.css.scss
@@ -28,3 +28,19 @@ header {
         background: url('../img/css_sprites.png') -10px -66px;
     }
 }
+
+@media only screen and (min-device-width: 800px) {
+    header {
+        grid-column: span 2;
+
+        h1 {
+            font-size: 40px;
+        }
+    }
+}
+
+@media only screen and (min-device-width: 1000px) {
+    header {
+        grid-column: span 3;
+    }
+}
