--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -14,7 +14,9 @@
         <h1>Sälj din Säl!</h1>
         <a href="sell.html"></a>
     </header>
+    <div class="ad1"></div>
     <%= yield %>
+    <div class="ad2"></div>
     </div>
 </body>
 </html>
