--- a/site/public/css/css.css
+++ b/site/public/css/css.css
@@ -1,290 +1,2 @@
-body {
-  margin: 0; }
-
-.grid {
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 1;
-  grid-template-rows: repeat(7, 1fr); }
-  .grid .ad1 {
-    display: none;
-    grid-column: span 1;
-    grid-row: span 6;
-    background-color: hotpink; }
-  .grid .ad2 {
-    display: none;
-    grid-column: span 1;
-    grid-row: span 6;
-    background-color: hotpink; }
-
-@media only screen and (min-device-width: 800px) {
-  .grid {
-    grid-template-columns: repeat(2, 1fr); }
-    .grid .ad1 {
-      display: block;
-      width: 30vw; } }
-@media only screen and (min-device-width: 1000px) {
-  .grid {
-    grid-template-columns: repeat(3, 1fr); }
-    .grid .ad1 {
-      width: 25vw; }
-    .grid .ad2 {
-      display: block;
-      width: 25vw; } }
-header {
-  grid-column: span 1;
-  grid-row: span 1;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 1;
-  background-color: #0D44FF; }
-  header h1 {
-    grid-column: 2/5;
-    grid-row: span 1;
-    font-family: 'Roboto Slab', serif;
-    font-size: 20px;
-    text-align: center;
-    margin-top: 20px;
-    color: white; }
-  header a {
-    margin-top: 20px;
-    margin-left: 15px;
-    width: 36px;
-    height: 36px;
-    background: url("../img/css_sprites.png") -10px -10px; }
-  header a:nth-of-type(2) {
-    width: 36px;
-    height: 36px;
-    background: url("../img/css_sprites.png") -10px -66px; }
-
-@media only screen and (min-device-width: 800px) {
-  header {
-    grid-column: span 2; }
-    header h1 {
-      font-size: 40px; } }
-@media only screen and (min-device-width: 1000px) {
-  header {
-    grid-column: span 3; } }
-.slideshow {
-  grid-column: span 1;
-  grid-row: span 3;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(3, 1fr); }
-  .slideshow img {
-    grid-column: span 5;
-    grid-row: span 3;
-    width: 100vw;
-    height: 43vh;
-    object-fit: cover; }
-
-.arrowleft {
-  position: absolute;
-  grid-column: 1/2;
-  grid-row: 2/3;
-  align-self: center;
-  justify-content: center;
-  margin-left: 0vw;
-  border-color: transparent; }
-  .arrowleft:active {
-    border-color: transparent; }
-
-.arrowright {
-  position: absolute;
-  grid-column: 5/6;
-  grid-row: 2/3;
-  align-self: center;
-  justify-content: center;
-  margin-left: 90vw;
-  border-color: transparent; }
-  .arrowright:active {
-    border-color: transparent; }
-
-@media only screen and (min-device-width: 400px) {
-  .slideshow {
-    grid-column: span 3;
-    grid-row: span 5; }
-    .slideshow img {
-      height: 72vh; }
-
-  .arrowright {
-    margin-left: 95vw; } }
-button {
-  color: #0D44FF;
-  align-self: center;
-  text-align: center;
-  background-color: white;
-  border-radius: 9001px;
-  font-size: 25px;
-  font-family: 'roboto';
-  border-style: solid;
-  border-color: #0D44FF;
-  grid-column: span 1; }
-  button:active {
-    color: white;
-    background-color: #0D44FF;
-    border-color: white; }
-
-main a {
-  align-self: center;
-  text-align: center; }
-main a:nth-of-type(1) {
-  grid-row: 4/5; }
-main a:nth-of-type(2) {
-  grid-row: 5/6; }
-main a:nth-of-type(3) {
-  grid-row: 6/7; }
-
-button.icon {
-  background-color: transparent;
-  border-color: transparent; }
-  button.icon:active {
-    background-color: transparent;
-    border-color: transparent; }
-
-.slideshow .arrowleft {
-  width: 36px;
-  height: 36px;
-  background: url("../img/css_sprites.png") -66px -10px; }
-.slideshow .arrowright {
-  width: 36px;
-  height: 36px;
-  background: url("../img/css_sprites.png") -66px -66px; }
-
-@media only screen and (min-device-width: 400px) {
-  main a:nth-of-type(1) {
-    grid-column: span 1;
-    grid-row: 1; }
-  main a:nth-of-type(2) {
-    grid-column: span 1;
-    grid-row: 1; }
-  main a:nth-of-type(3) {
-    grid-column: span 1;
-    grid-row: 1; } }
-main {
-  grid-column: span 1;
-  grid-row: span 6;
-  width: 100vw;
-  display: grid;
-  grid-template-columns: inherit;
-  grid-template-rows: repeat(6, 1fr);
-  background-color: #00C0FF; }
-
-main.sell {
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(12, 1fr); }
-
-main.faq {
-  grid-template-columns: repeat(1, 1fr); }
-
-main.sellers {
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr); }
-
-@media only screen and (min-device-width: 400px) {
-  main {
-    grid-template-columns: repeat(3, 1fr); } }
-@media only screen and (min-device-width: 800px) {
-  main {
-    width: 70vw; }
-
-  .slideshow img {
-    width: 70vw; }
-  .slideshow .arrowright {
-    margin-left: 65vw; } }
-@media only screen and (min-device-width: 1000px) {
-  main {
-    width: 50vw; }
-
-  .slideshow img {
-    width: 50vw; }
-  .slideshow .arrowright {
-    margin-left: 47vw; } }
-main.sell input {
-  grid-column: 2/7; }
-main.sell input:nth-of-type(1) {
-  grid-row: 2; }
-main.sell input:nth-of-type(2) {
-  grid-row: 4; }
-main.sell input:nth-of-type(3) {
-  grid-row: 6; }
-main.sell input:nth-of-type(4) {
-  grid-row: 8; }
-main.sell input:nth-of-type(5) {
-  grid-column: 2;
-  grid-row: 9; }
-main.sell a:nth-of-type(1) {
-  grid-column: 3/7;
-  grid-row: 9;
-  text-decoration: none;
-  color: black; }
-main.sell a:nth-of-type(2) {
-  grid-column: 2/7;
-  grid-row: 10/12; }
-main.sell p {
-  grid-column: 2/7;
-  grid-row: 2/7;
-  font-family: 'Roboto Slab', 'serif';
-  font-size: 25px; }
-main.sell img {
-  grid-column: 2/7;
-  grid-row: 7/12;
-  width: 71.5vw;
-  height: 35vh;
-  object-fit: cover; }
-
-main h3 {
-  margin-left: 10px;
-  margin-right: 10px; }
-main p {
-  margin-left: 20px; }
-
-main.sellers img {
-  grid-column: span 1;
-  grid-row: span 1;
-  width: 50vw;
-  height: 43vh;
-  object-fit: cover; }
-main.sellers .details {
-  width: 74vw;
-  height: 0vh;
-  margin-left: 13vw;
-  margin-top: 13vh;
-  position: absolute;
-  background-image: url(../img/free_sealler.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  transition: 1s;
-  visibility: hidden; }
-main.sellers .darken {
-  position: absolute;
-  width: 100vw;
-  height: 0vh;
-  background-color: black;
-  opacity: 0.5;
-  transition: 0.5s;
-  visibility: hidden; }
-main.sellers .show {
-  height: 60vh;
-  visibility: visible; }
-main.sellers .fade {
-  height: 100vh;
-  visibility: visible; }
-
-@media only screen and (min-device-width: 800px) {
-  main.sellers img {
-    width: 35vw; }
-  main.sellers .details {
-    width: 51.8vw;
-    margin-left: 9.1vw; }
-  main.sellers .darken {
-    width: 70vw; } }
-@media only screen and (min-device-width: 1000px) {
-  main.sellers img {
-    width: 25vw; }
-  main.sellers .details {
-    width: 37vw;
-    margin-left: 6.5vw; }
-  main.sellers .darken {
-    width: 50vw; } }
+body{margin:0}.grid{width:100vw;height:100vh;display:grid;grid-template-columns:1;grid-template-rows:repeat(7,1fr)}.grid .ad1{display:none;grid-column:span 1;grid-row:span 6;background-color:hotpink}.grid .ad2{display:none;grid-column:span 1;grid-row:span 6;background-color:hotpink}@media only screen and (min-device-width:800px){.grid{grid-template-columns:repeat(2,1fr)}.grid .ad1{display:block;width:30vw}}@media only screen and (min-device-width:1000px){.grid{grid-template-columns:repeat(3,1fr)}.grid .ad1{width:25vw}.grid .ad2{display:block;width:25vw}}header{grid-column:span 1;grid-row:span 1;display:grid;grid-template-columns:repeat(5,1fr);grid-template-rows:1;background-color:#0d44ff}header h1{grid-column:2/5;grid-row:span 1;font-family:'Roboto Slab',serif;font-size:20px;text-align:center;margin-top:20px;color:white}header a{margin-top:20px;margin-left:15px;width:36px;height:36px;background:url("../img/css_sprites.png") -10px -10px}header a:nth-of-type(2){width:36px;height:36px;background:url("../img/css_sprites.png") -10px -66px}@media only screen and (min-device-width:800px){header{grid-column:span 2}header h1{font-size:40px}}@media only screen and (min-device-width:1000px){header{grid-column:span 3}}.slideshow{grid-column:span 1;grid-row:span 3;display:grid;grid-template-columns:repeat(5,1fr);grid-template-rows:repeat(3,1fr)}.slideshow img{grid-column:span 5;grid-row:span 3;width:100vw;height:43vh;object-fit:cover}.arrowleft{position:absolute;grid-column:1/2;grid-row:2/3;align-self:center;justify-content:center;margin-left:0vw;border-color:transparent}.arrowleft:active{border-color:transparent}.arrowright{position:absolute;grid-column:5/6;grid-row:2/3;align-self:center;justify-content:center;margin-left:90vw;border-color:transparent}.arrowright:active{border-color:transparent}@media only screen and (min-device-width:400px){.slideshow{grid-column:span 3;grid-row:span 5}.slideshow img{height:72vh}.arrowright{margin-left:95vw}}button{color:#0d44ff;align-self:center;text-align:center;background-color:white;border-radius:9001px;font-size:25px;font-family:'roboto';border-style:solid;border-color:#0d44ff;grid-column:span 1}button:active{color:white;background-color:#0d44ff;border-color:white}main a{align-self:center;text-align:center}main a:nth-of-type(1){grid-row:4/5}main a:nth-of-type(2){grid-row:5/6}main a:nth-of-type(3){grid-row:6/7}button.icon{background-color:transparent;border-color:transparent}button.icon:active{background-color:transparent;border-color:transparent}.slideshow .arrowleft{width:36px;height:36px;background:url("../img/css_sprites.png") -66px -10px}.slideshow .arrowright{width:36px;height:36px;background:url("../img/css_sprites.png") -66px -66px}@media only screen and (min-device-width:400px){main a:nth-of-type(1){grid-column:span 1;grid-row:1}main a:nth-of-type(2){grid-column:span 1;grid-row:1}main a:nth-of-type(3){grid-column:span 1;grid-row:1}}main{grid-column:span 1;grid-row:span 6;width:100vw;display:grid;grid-template-columns:inherit;grid-template-rows:repeat(6,1fr);background-color:#00c0ff}main.sell{grid-template-columns:repeat(7,1fr);grid-template-rows:repeat(12,1fr)}main.faq{grid-template-columns:repeat(1,1fr)}main.sellers{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}@media only screen and (min-device-width:400px){main{grid-template-columns:repeat(3,1fr)}}@media only screen and (min-device-width:800px){main{width:70vw}.slideshow img{width:70vw}.slideshow .arrowright{margin-left:65vw}}@media only screen and (min-device-width:1000px){main{width:50vw}.slideshow img{width:50vw}.slideshow .arrowright{margin-left:47vw}}main.sell input{grid-column:2/7}main.sell input:nth-of-type(1){grid-row:2}main.sell input:nth-of-type(2){grid-row:4}main.sell input:nth-of-type(3){grid-row:6}main.sell input:nth-of-type(4){grid-row:8}main.sell input:nth-of-type(5){grid-column:2;grid-row:9}main.sell a:nth-of-type(1){grid-column:3/7;grid-row:9;text-decoration:none;color:black}main.sell a:nth-of-type(2){grid-column:2/7;grid-row:10/12}main.sell p{grid-column:2/7;grid-row:2/7;font-family:'Roboto Slab','serif';font-size:25px}main.sell img{grid-column:2/7;grid-row:7/12;width:71.5vw;height:35vh;object-fit:cover}main h3{margin-left:10px;margin-right:10px}main p{margin-left:20px}main.sellers img{grid-column:span 1;grid-row:span 1;width:50vw;height:43vh;object-fit:cover}main.sellers .details{width:74vw;height:0vh;margin-left:13vw;margin-top:13vh;position:absolute;background-image:url(../img/free_sealler.jpg) 50% 50%;background-size:cover;background-repeat:no-repeat;transition:1s;visibility:hidden}main.sellers .darken{position:absolute;width:100vw;height:0vh;background-color:black;opacity:.5;transition:.5s;visibility:hidden}main.sellers .show{height:60vh;visibility:visible}main.sellers .fade{height:100vh;visibility:visible}@media only screen and (min-device-width:800px){main.sellers img{width:35vw}
+main.sellers .details{width:51.8vw;margin-left:9.1vw}main.sellers .darken{width:70vw}}@media only screen and (min-device-width:1000px){main.sellers img{width:25vw}main.sellers .details{width:37vw;margin-left:6.5vw}main.sellers .darken{width:50vw}}
